Closed Bug 851485 Opened 13 years ago Closed 13 years ago

After reload anchor link not respected

Categories

(Core :: Layout, defect)

22 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22
Tracking Status
firefox21 --- unaffected
firefox22 + fixed

People

(Reporter: rodrigozeh, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:22.0) Gecko/20130314 Firefox/22.0 Build ID: 20130314030914 Steps to reproduce: 1. Open http://www.neogaf.com/forum/showthread.php?p=50224464#post50224464 2. Scroll to any other position (except top, see Bug 849219) 3. Reload the page 4. Go to be bottom and click on "RETURN TO TOP" Actual results: Nothing. Expected results: Firefox should have scrolled the page to the top.
Component: Untriaged → Layout
Product: Firefox → Core
Is this a regression from bug 842853?
Sure looks like it to me, since it regressed in the right timeframe. We should presumably only ignore one GoToAnchor call?
Blocks: 842853
Keywords: regression
Yeah, I actually did that in the patch I submitted for review, but I couldn't really explain why it was needed so we decided to take it out in the end.
Assignee: nobody → matspal
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
OS: Windows 7 → All
Hardware: x86_64 → All
Attached patch fixSplinter Review
I guess we should try to fix this ASAP. I'll write a test later. https://tbpl.mozilla.org/?tree=Try&rev=de89a7f1bcfc
Attachment #725400 - Flags: review?(roc)
Attachment #725400 - Flags: review?(bzbarsky)
Attachment #725400 - Flags: review?(bzbarsky) → review+
Comment on attachment 725400 [details] [diff] [review] fix Thanks, I'll land it as soon as inbound opens and Try is green...
Attachment #725400 - Flags: review?(roc)
Attached patch mochitestSplinter Review
Flags: in-testsuite+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
No longer blocks: 857336
Depends on: 857336
No longer depends on: 857336
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: