Bug 851485 - Restoring scroll position from history should only suppress one scroll-to-anchor.  r=bzbarsky